# ferrum2d

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: release.yml
apps/placement-viewer-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/placement-viewer-desktop/src-tauri/capabilities/: default.json
apps/placement-viewer-desktop/src-tauri/src/: lib.rs  main.rs  placement_document.rs
docs/: README.md  advanced-development-plan.md  agent-review-checklist.md  agent-workflow.md  architecture.md  code_review.md  game-spec.md  mvp.md  npm-release.md  physics-engine.md  physics-v2.md  physics-v3.md  physics-v5-slope-handling-plan.md  product-roadmap.md  public-api.md  roadmap.md  smoke-check.md  topdown-shooter-smoke-checklist.md  user-guide.md
schemas/: gameplay-authoring-dry-run-report.schema.json  gameplay-replay-smoke-report.schema.json  physics-authoring.schema.json  shooter-game-spec.schema.json  topdown-authored-behavior-variant.schema.json
scripts/: README.md  accessibility-options-smoke.mjs  animation-timeline-smoke.mjs  audio-system-smoke.mjs  behavior-recipes-smoke.mjs  browser-render-smoke.mjs  build-pages.mjs  build-wasm.mjs  camera-postprocess-smoke.mjs  check-agents-package.mjs  check-create-game-package.mjs  check-package-files.mjs  check-release-readiness.mjs  consumer-smoke-report-validation-smoke.mjs  create-game-template-report-envelope-smoke.mjs  create-game-variant.mjs  cutscene-sequence-smoke.mjs  debug-gizmos-smoke.mjs  destructible-terrain-smoke.mjs  (+27 more)
(+635 files in other folders)
