[package]
name = "ferrum-placement-viewer-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ferrum2D placement viewer desktop spike"

[lib]
name = "ferrum_placement_viewer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ferrum-placement-viewer-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
